added cart, decor and map

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -19,6 +19,26 @@ a
 		color: inherit
 		text-decoration: none
 
+#map
+	width: 100%
+	height: 400px
+	padding: 30px 0
+
+#cart
+	// background: url("../images/cd-cart.svg") no-repeat
+	// font-size: 2em
+	position: absolute
+	display: block
+	height: 100%
+	width: 90px
+	top: 0
+	right: 110px
+	line-height: 70px
+	text-align: center
+	font-size: 2em
+	color: rgba(76,76,78,.8)
+#cd-top-nav ul
+	padding-right: 50px
 #head
 	padding: 20px 0 40px
 	// background-image: url(../images/noise.png),radial-gradient(center,ellipse cover,#efe6dd 10%,#d8c9b5 60%)
@@ -67,7 +87,7 @@ main
 	background-color: #FFF
 
 .decor-panel
-	padding-top: 10px
+	padding-top: 15px
 	.decor
 		position: relative
 
@@ -240,6 +260,19 @@ main
 				text-shadow: none
 				background: rgba(255,255,255,.9)
 
+#slider
+	padding: 30px 0
+	.slides
+		position: relative
+		width: 60%
+		margin: 0 auto
+	.slider-wrap
+		// position: relative
+	img
+		width: 100%
+		height: 400px
+		display: block
+		margin: 0 auto
 footer
 	padding: 60px 0
 	background: #FFF
