--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,6 @@
 @import 'fonts'
 // @import 'media'
+// @import "slider.css"
 
 
 $color: rgb(44, 89, 123)
@@ -22,7 +23,7 @@ a
 #map
 	width: 100%
 	height: 400px
-	padding: 30px 0
+	padding-top: 70px
 
 #cart
 	// background: url("../images/cd-cart.svg") no-repeat
@@ -37,6 +38,9 @@ a
 	text-align: center
 	font-size: 2em
 	color: rgba(76,76,78,.8)
+	transition: .1s ease-in
+	&:hover
+		color: rgba(76,76,78,1)
 #cd-top-nav ul
 	padding-right: 50px
 #head
@@ -87,7 +91,7 @@ main
 	background-color: #FFF
 
 .decor-panel
-	padding-top: 15px
+	padding-top: 20px
 	.decor
 		position: relative
 
@@ -261,13 +265,33 @@ main
 				background: rgba(255,255,255,.9)
 
 #slider
-	padding: 30px 0
+	padding: 20px 0
+	hr
+		margin: 40px 0
 	.slides
 		position: relative
-		width: 60%
+		width: 100%
 		margin: 0 auto
 	.slider-wrap
 		// position: relative
+	.unslider-arrow
+		top: 45%
+		display: block
+		width: 35px
+		height: 35px
+		background: $color2
+		text-align: center
+		line-height: 33px
+		color: #fff
+		font-size: 1.3em
+		text-transform: uppercase
+		font-weight: 300
+		border-radius: 50%
+		transition: all .3s
+		box-shadow: 1px 1px 4px rgba(0,0,0,.4)
+		&:hover
+			background: #fff
+			color: $color2
 	img
 		width: 100%
 		height: 400px
